--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@mui/material": "^6.1.1",
     "@mui/x-data-grid": "^7.18.0",
     "@tanstack/react-query": "^5.56.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.111",
@@ -47,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0"
+  }
 }
